--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=mediaproject_albumservice
+spring.application.name=albumservice
 
 server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/leonardodb
+spring.datasource.url=jdbc:mysql://localhost:3306/leonardodb2
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -12,7 +12,7 @@ spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-eureka.instance.appname=ALBUMSERVICE
+eureka.instance.appname=mediaproject_albumservice
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
